# robocup-home-education-atlas

./: CMakeLists.txt  README.md  package.xml
behavior_trees_xml/: follow_person.xml
carry_my_luggage_dialog/: CMakeLists.txt  package.xml
carry_my_luggage_dialog/behavior_tree_xml/: behavior_tree.xml
carry_my_luggage_dialog/include/carry_my_luggage_dialog/: Get_Luggage.h  Luggage.h
carry_my_luggage_dialog/src/: get_luggage_node.cpp
carry_my_luggage_dialog/src/carry_my_luggage_dialog/: Get_Luggage.cpp  Luggage.cpp
dialog_atlas/: CMakeLists.txt  obtener_nombre.json  package.xml
dialog_atlas/behavior_tree_xml/: behavior_tree.xml
dialog_atlas/behavior_trees_xml/: dialog.xml
dialog_atlas/config/: params.yaml
dialog_atlas/include/dialog_atlas/: Activation.h  Application.h  Get_Name.h  GiveDescription.h  Name.h  ProvideInfo.h  Prueba.h
dialog_atlas/launch/: dialog_atlas.launch
dialog_atlas/msg/: activate_msg.msg
dialog_atlas/src/: activate_topic.cpp  dialog_topic.cpp  get_name_node.cpp  give_description_node.cpp  provide_info_node.cpp
dialog_atlas/src/behavior_tree_xml/: behavior_tree.xml
dialog_atlas/src/dialog_atlas/: Activation.cpp  Application.cpp  Get_Name.cpp  GiveDescription.cpp  Name.cpp  ProvideInfo.cpp  Prueba.cpp
find_my_mates/: CMakeLists.txt  find_my_mates_node.cpp  package.xml
find_my_mates/behavior_tree_xml/: behavior_tree.xml
find_my_mates/find_my_mates_BT/: find_my_mates_BT.xml
find_my_mates/include/find_my_mates/: ApproachOperator.h  BTNavAction.h  DetectGuest.h  GetDescription.h  GetPosition.h  InfoCompleted.h  Move.h
find_my_mates/launch/: find_my_mates.launch  prueba.launch
find_my_mates/src/: find_my_mates_node.cpp
find_my_mates/src/find_my_mates/: ApproachOperator.cpp  DetectGuest.cpp  GetDescription.cpp  GetPosition.cpp  InfoCompleted.cpp  Move.cpp
include/behavior_trees/: Follow_Person.h  Move.h  Person_Detected.h
launch/: follow_person.launch
maps/: map_robocup.yaml  robocup_map.yaml
movement/: CMakeLists.txt  package.xml
movement/behavior_tree_xml/: behavior_tree.xml  carry.xml
movement/include/: PIDController.h  enum_pos.h
movement/include/movement/: ApproachPerson.h  BTNavAction.h  CurrentPosition.h  FollowPerson.h  Follow_Person.h  GetPosition.h  GoToPosition.h  Is_bumped.h  Move.h  Person_Detected.h  Turn.h
movement/launch/: movement.launch  navigation.launch
movement/msg/: ropa_hsv.msg
movement/src/: PIDController.cpp  move_node.cpp  nodo_prueba_1.cpp  position_server_node.cpp
movement/src/movement/: ApproachPerson.cpp  CurrentPosition.cpp  Follow_Person.cpp  GetPosition.cpp  GoToPosition.cpp  Is_bumped.cpp  Move.cpp  Person_Detected.cpp  Turn.cpp
movement/srv/: Position.srv
msg/: bbx_info.msg  ropa_hsv.msg
navegacion_robocup/: CMakeLists.txt  package.xml
navegacion_robocup/behaviorTreesXml/: tree1.xml
navegacion_robocup/include/navegacion_robocup/: Prueba.h
navegacion_robocup/rviz/: config.rviz
navegacion_robocup/src/: navegacion_node.cpp
navegacion_robocup/src/navegacion_robocup/: Prueba.cpp
robocup/: CMakeLists.txt  package.xml
robocup/behavior_trees/: carry_my_luggage_BT.xml
robocup/launch/: find_my_mates.launch
robocup/src/: carry_my_luggage_node.cpp  find_my_mates_node.cpp
robocup_navigation/: CMakeLists.txt  package.xml
robocup_navigation/behavior_tree_xml/: behavior_tree.xml
robocup_navigation/include/robocup_navigation/: BTNavAction.h  GetPosition.h  Move.h  enum_pos.h
robocup_navigation/launch/: navigation.launch
robocup_navigation/src/: goal_server_node.cpp  move_node.cpp  position_server_node.cpp
robocup_navigation/src/robocup_navigation/: GetPosition.cpp  Move.cpp
robocup_navigation/srv/: Goal.srv
src/: nodo_bbx_msg_publisher_advanced.cpp  nodo_prueba_1.cpp
src/behavior_trees/: Follow_Person.cpp  Move.cpp  Person_Detected.cpp  Turn.cpp
vision/: CMakeLists.txt  package.xml
vision/include/vision/: DetectOperator.h  DetectPerson.h
vision/launch/: prueba.launch  vision.launch
vision/msg/: clothes.msg  ropa_hsv.msg
vision/src/: color_filter.cpp  nodo_bbx_msg_publisher_advanced.cpp  operator_tf_node.cpp  person_tf_node.cpp
vision/src/vision/: DetectOperator.cpp  DetectPerson.cpp
vision_2.0/: CMakeLists.txt  README.md  package.xml
vision_2.0/behavior_trees_xml/: prueba.xml
vision_2.0/include/behavior_trees/: BTNavAction.h  Bag_Detected.h  Follow_Person.h  Is_bumped.h  Move.h  Turn.h
vision_2.0/launch/: follow_person.launch
vision_2.0/maps/: map_robocup.yaml
vision_2.0/msg/: ropa_hsv.msg
vision_2.0/src/: nodo_bbx_msg_publisher_advanced.cpp  nodo_behavior_trees_robocup.cpp
vision_2.0/src/behavior_trees/: Bag_Detected.cpp  Follow_Person.cpp  Is_bumped.cpp  Move.cpp
