<?xml version="1.0"?>
<package format="2">
  <name>carry_my_luggage_dialog</name>
  <version>0.0.0</version>
  <description>The carry_my_luggage_dialog package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="elisa@todo.todo">elisa</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


   
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>behaviortree_cpp_v3</build_depend>
  <build_depend>gb_dialog</build_depend>
   <build_depend>dialog_atlas</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>dialogflow_ros_msgs</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>sound_play</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>libzmq3-dev</build_depend>
  
  
  <build_export_depend>behaviortree_cpp_v3</build_export_depend>
  <build_export_depend>gb_dialog</build_export_depend>
  <build_export_depend>dialog_atlas</build_export_depend>
  <build_export_depend>libzmq3-dev</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>


  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>dialogflow_ros_msgs</exec_depend>
  <exec_depend>sound_play</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>behaviortree_cpp_v3</exec_depend>
  <exec_depend>gb_dialog</exec_depend>
  <exec_depend>dialog_atlas</exec_depend>
  <exec_depend>libzmq3-dev</exec_depend>

 
  <export>

  </export>
</package>
